<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtYourPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yourPinID"
        android:layout_alignBottom="@+id/yourPinID"
        android:layout_alignLeft="@+id/txtYourId"
        android:text="-"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/txtYourAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/yourSecChatID"
        android:layout_marginLeft="81dp"
        android:layout_toRightOf="@+id/yourAliasID"
        android:text="-"
        android:ems="5"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/yourAliasID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/yourAlias"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/yourSecChatID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yourAliasID"
        android:layout_below="@+id/yourAliasID"
        android:layout_marginTop="25dp"
        android:text="@string/yourID"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/yourPinID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yourSecChatID"
        android:layout_below="@+id/yourSecChatID"
        android:layout_marginTop="30dp"
        android:text="@string/yourPIN"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/txtYourId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/yourPinID"
        android:layout_alignLeft="@+id/txtYourAlias"
        android:text="-"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/HintID"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yourPinID"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/generateNewPIN" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/HintID"
        android:layout_alignBottom="@+id/HintID"
        android:layout_alignRight="@+id/txtYourAlias"
        android:text="@string/saveAlias" />

</RelativeLayout>